# Space-and-Pew

./: .gitignore  README.md
.github/workflows/: rust.yml
godot/: config.gd  icon.svg.import  project.godot
godot/extentions/: main.gdextension
godot/player/: player.gd  sprite.gd
godot/scenes/: game.gd  game.tscn  game_menu.tscn  title_screen.tscn
godot/scenes/autoload/: resource_library.tscn
godot/scenes/ui/: background.tscn  main_menu.tscn  ship_selector.tscn  ship_selector_icon.tscn
godot/scripts/: game.gd  game_menu.gd  title_screen.gd
godot/scripts/autoload/: game_manager.gd  resource_library.gd
godot/scripts/state_machine/: fsm.gd  state.gd
godot/scripts/static/: enums.gd  main_scenes.gd  paths.gd  save_manager.gd
godot/scripts/structures/: cost.gd  costs.gd
godot/scripts/ui/: background.gd  cyber_button.gd  main_menu.gd  ship_selector.gd  ship_selector_icon.gd  title_screen.gd
godot/ship/: data.gd  ship.gd
godot/ship/player/: data.gd  player.gd  sprite.gd  state_machine.tscn
godot/ships/: ship.gd
godot/ships/player/: player.gd  state_machine.tscn
godot/upgrade/: ship_base.gd  weapon_base.gd
godot/upgrade/stages/: stage_int.gd
godot/weapon/: behavior.gd  data.gd  weapon.gd
godot/weapon/projectile/: data.gd  (+1 more)
rust/main/: Cargo.toml
rust/main/src/: config.rs  game_state.rs  global_state.rs  interface.rs  lib.rs
rust/main/src/entities/: player_configuration.rs  unlocked_ships.rs  unlocked_weapons.rs
rust/main/src/enums/: player_ship_type.rs
rust/main/src/structures/: bitvector.rs
rust/main/src/traits/: serde.rs
(+9 files in other folders)
