[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "serde",
] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde_repr = "0.1.19"

[lib]
crate-type = ["cdylib"]